# IceNET.AI

./: README.md
app/: CMakeLists.txt  main.cpp
app/inc/: console.h  consoleTypes.h  device.h  deviceTypes.h  gui.h  guiTypes.h
app/lib/: libcyusb.cpp
app/src/: console.cpp  device.cpp  gui.cpp
base/app/: Makefile  app  fx2_download.cpp  fx3_download.cpp  moc_controlcenter.cpp  notes.h  ui_controlcenter.h
base/src/: Makefile  controlcenter.pro  cyusb_linux  data_out  main.cpp  reload
